// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> renders <Select /> components 1`] = `
<div
  aria-controls="expandable"
  aria-disabled={false}
  aria-expanded={false}
  className="gio-select gio-select-middle gio-select-single gio-select-bordered"
  onClick={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="combobox"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="gio-select-selector"
  >
    <div
      className="gio-select-values-wrapper"
    >
      <div
        className="gio-select-item"
      >
        <span
          className="gio-select-item-text"
        >
          全部
        </span>
      </div>
    </div>
  </div>
  <div
    className="gio-select-arrow"
  >
    <span
      className="gio-icon"
    >
      <svg
        className="gio-icon-svg"
        fill="currentColor"
        height="1rem"
        viewBox="0 0 14 14"
        width="1rem"
      >
        <defs>
          <style />
        </defs>
        <g
          data-name="\\\\u56FE\\\\u5C42 2"
          id="down-filled_svg__\\\\u56FE\\\\u5C42_2"
        >
          <g
            data-name="\\\\u56FE\\\\u5C42 1"
            id="down-filled_svg__\\\\u56FE\\\\u5C42_1-2"
          >
            <path
              d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
              fill="currentColor"
              fillRule="evenodd"
              id="down-filled_svg__down-2"
            />
          </g>
        </g>
      </svg>
    </span>
  </div>
</div>
`;

exports[`<Select /> renders <Select /> components 2`] = `
<div
  aria-controls="expandable"
  aria-disabled={false}
  aria-expanded={false}
  className="gio-select gio-select-middle gio-select-single gio-select-bordered"
  onClick={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="combobox"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="gio-select-selector"
  >
    <div
      className="gio-select-values-wrapper"
    >
      <div
        className="gio-select-item"
      >
        <span
          className="gio-select-item-text"
        >
          全部
        </span>
      </div>
    </div>
  </div>
  <div
    className="gio-select-arrow"
  >
    <span
      className="gio-icon"
    >
      <svg
        className="gio-icon-svg"
        fill="currentColor"
        height="1rem"
        viewBox="0 0 14 14"
        width="1rem"
      >
        <defs>
          <style />
        </defs>
        <g
          data-name="\\\\u56FE\\\\u5C42 2"
          id="down-filled_svg__\\\\u56FE\\\\u5C42_2"
        >
          <g
            data-name="\\\\u56FE\\\\u5C42 1"
            id="down-filled_svg__\\\\u56FE\\\\u5C42_1-2"
          >
            <path
              d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
              fill="currentColor"
              fillRule="evenodd"
              id="down-filled_svg__down-2"
            />
          </g>
        </g>
      </svg>
    </span>
  </div>
</div>
`;

exports[`<Select multiple/> renders <Select multiple/> components 1`] = `
<div
  aria-controls="expandable"
  aria-disabled={false}
  aria-expanded={false}
  className="gio-select gio-select-middle gio-select-bordered"
  onClick={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="combobox"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="gio-select-selector"
  >
    <div
      className="gio-select-values-wrapper"
    >
      <span
        aria-hidden="true"
        className="gio-tag gio-tag-size-medium gio-tag-type-normal gio-select-item"
      >
        <span
          className="gio-tag-label"
        >
          全部
        </span>
      </span>
    </div>
  </div>
  <div
    className="gio-select-arrow"
  >
    <span
      className="gio-icon"
    >
      <svg
        className="gio-icon-svg"
        fill="currentColor"
        height="1rem"
        viewBox="0 0 14 14"
        width="1rem"
      >
        <defs>
          <style />
        </defs>
        <g
          data-name="\\\\u56FE\\\\u5C42 2"
          id="down-filled_svg__\\\\u56FE\\\\u5C42_2"
        >
          <g
            data-name="\\\\u56FE\\\\u5C42 1"
            id="down-filled_svg__\\\\u56FE\\\\u5C42_1-2"
          >
            <path
              d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
              fill="currentColor"
              fillRule="evenodd"
              id="down-filled_svg__down-2"
            />
          </g>
        </g>
      </svg>
    </span>
  </div>
</div>
`;

exports[`<Select multiple/> renders <Select multiple/> components 2`] = `
<div
  aria-controls="expandable"
  aria-disabled={false}
  aria-expanded={false}
  className="gio-select gio-select-middle gio-select-bordered"
  onClick={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="combobox"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="gio-select-selector"
  >
    <div
      className="gio-select-values-wrapper"
    >
      <span
        aria-hidden="true"
        className="gio-tag gio-tag-size-medium gio-tag-type-normal gio-select-item"
      >
        <span
          className="gio-tag-label"
        >
          全部
        </span>
      </span>
    </div>
  </div>
  <div
    className="gio-select-arrow"
  >
    <span
      className="gio-icon"
    >
      <svg
        className="gio-icon-svg"
        fill="currentColor"
        height="1rem"
        viewBox="0 0 14 14"
        width="1rem"
      >
        <defs>
          <style />
        </defs>
        <g
          data-name="\\\\u56FE\\\\u5C42 2"
          id="down-filled_svg__\\\\u56FE\\\\u5C42_2"
        >
          <g
            data-name="\\\\u56FE\\\\u5C42 1"
            id="down-filled_svg__\\\\u56FE\\\\u5C42_1-2"
          >
            <path
              d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
              fill="currentColor"
              fillRule="evenodd"
              id="down-filled_svg__down-2"
            />
          </g>
        </g>
      </svg>
    </span>
  </div>
</div>
`;
